--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "co": "^4.6.0",
+    "express": "^4.16.2",
+    "request": "^2.85.0"
   }
 }
